--- a/GEL_CAPTAN/TOP_LEVEL_summary.html
+++ b/GEL_CAPTAN/TOP_LEVEL_summary.html
@@ -19,36 +19,35 @@
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
 <TD>xc4vlx25-10ff668</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
-<TD>
-No Errors</TD>
+<TD>&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\_xmsgs/*.xmsgs?&DataKey=Warning'>562 Warnings (562 new)</A></TD>
+<TD>&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
 <TD>Balanced</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Routing Results:</B></LI></UL></TD>
 <TD>
-<A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\TOP_LEVEL.unroutes'>All Signals Completely Routed</A></TD>
+<A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.unroutes'>All Signals Completely Routed</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Strategy:</B></dif></TD>
 <TD><A HREF_DISABLED='Xilinx Default (unlocked)?&DataKey=Strategy'>Xilinx Default (unlocked)</A></TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Timing Constraints:</B></LI></UL></TD>
 <TD>
-<A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\TOP_LEVEL.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
+<A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
 <TD>
-<A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\TOP_LEVEL_envsettings.html'>
+<A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL_envsettings.html'>
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
-<TD>0 &nbsp;<A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\TOP_LEVEL.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
+<TD>0 &nbsp;<A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
 </TR>
 </TABLE>
 
@@ -131,7 +130,7 @@ System Settings</A>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\TOP_LEVEL_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
 <TD ALIGN=RIGHT>47</TD>
 <TD ALIGN=RIGHT>448</TD>
 <TD ALIGN=RIGHT>10%</TD>
@@ -201,18 +200,18 @@ System Settings</A>
 <TD BGCOLOR='#FFFF99'><B>Final Timing Score:</B></TD>
 <TD>0 (Setup: 0, Hold: 0, Component Switching Limit: 0)</TD>
 <TD BGCOLOR='#FFFF99'><B>Pinout Data:</B></TD>
-<TD COLSPAN='2'><A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\TOP_LEVEL_par.xrpt?&DataKey=PinoutData'>Pinout Report</A></TD>
+<TD COLSPAN='2'><A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL_par.xrpt?&DataKey=PinoutData'>Pinout Report</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Routing Results:</B></TD><TD>
-<A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\TOP_LEVEL.unroutes'>All Signals Completely Routed</A></TD>
+<A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.unroutes'>All Signals Completely Routed</A></TD>
 <TD BGCOLOR='#FFFF99'><B>Clock Data:</B></TD>
-<TD COLSPAN='2'><A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\TOP_LEVEL_par.xrpt?&DataKey=ClocksData'>Clock Report</A></TD>
+<TD COLSPAN='2'><A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL_par.xrpt?&DataKey=ClocksData'>Clock Report</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Timing Constraints:</B></TD>
 <TD>
-<A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\TOP_LEVEL.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
+<A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
 <TD BGCOLOR='#FFFF99'><B>&nbsp;</B></TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TABLE>
@@ -223,20 +222,20 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\TOP_LEVEL.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Fri Aug 5 13:27:02 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\_xmsgs/xst.xmsgs?&DataKey=Warning'>271 Warnings (271 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\_xmsgs/xst.xmsgs?&DataKey=Info'>136 Infos (136 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\TOP_LEVEL.bld'>Translation Report</A></TD><TD>Current</TD><TD>Fri Aug 5 13:32:06 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>36 Warnings (36 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\_xmsgs/ngdbuild.xmsgs?&DataKey=Info'>3 Infos (3 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\TOP_LEVEL_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Fri Aug 5 13:33:35 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\_xmsgs/map.xmsgs?&DataKey=Warning'>129 Warnings (129 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\_xmsgs/map.xmsgs?&DataKey=Info'>9 Infos (9 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\TOP_LEVEL.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Fri Aug 5 13:34:14 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\_xmsgs/par.xmsgs?&DataKey=Warning'>64 Warnings (64 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\_xmsgs/par.xmsgs?&DataKey=Info'>1 Info (1 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Fri Aug 26 09:44:14 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\_xmsgs/xst.xmsgs?&DataKey=Warning'>271 Warnings (271 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\_xmsgs/xst.xmsgs?&DataKey=Info'>136 Infos (136 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.bld'>Translation Report</A></TD><TD>Current</TD><TD>Fri Aug 26 09:44:14 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>36 Warnings (36 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\_xmsgs/ngdbuild.xmsgs?&DataKey=Info'>3 Infos (3 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Fri Aug 26 09:44:14 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\_xmsgs/map.xmsgs?&DataKey=Warning'>129 Warnings (129 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\_xmsgs/map.xmsgs?&DataKey=Info'>9 Infos (9 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Fri Aug 26 09:44:14 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\_xmsgs/par.xmsgs?&DataKey=Warning'>64 Warnings (64 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\_xmsgs/par.xmsgs?&DataKey=Info'>1 Info (1 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\TOP_LEVEL.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Fri Aug 5 13:34:29 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\_xmsgs/trce.xmsgs?&DataKey=Info'>3 Infos (3 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\TOP_LEVEL.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Fri Aug 5 13:35:09 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>62 Warnings (62 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\_xmsgs/bitgen.xmsgs?&DataKey=Info'>3 Infos (3 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Fri Aug 26 09:44:14 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\_xmsgs/trce.xmsgs?&DataKey=Info'>3 Infos (3 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Fri Aug 26 09:44:17 2016</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/SignalProcessing/GEL_CAPTAN\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Aug 5 13:35:10 2016</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Collin/Fermilab/NewADCFirmware/GEL_CAPTAN\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Aug 26 09:44:17 2016</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 08/12/2016 - 14:32:17</center>
+<br><center><b>Date Generated:</b> 08/26/2016 - 11:31:38</center>
 </BODY></HTML>
