--- a/GEL_CAPTAN/TOP_LEVEL_summary.html
+++ b/GEL_CAPTAN/TOP_LEVEL_summary.html
@@ -2,29 +2,29 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>TOP_LEVEL Project Status (09/16/2016 - 15:48:51)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>TOP_LEVEL Project Status (09/16/2016 - 16:50:04)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>dig_mac.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
+<TD> No Errors </TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
 <TD>TOP_LEVEL</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
-<TD>Programming File Generated</TD>
+<TD>Bitgen Completed</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
 <TD>xc4vlx25-10ff668</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
-<TD>
-No Errors</TD>
+<TD>&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/*.xmsgs?&DataKey=Warning'>734 Warnings (702 new)</A></TD>
+<TD>&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -59,13 +59,13 @@ System Settings</A>
 <TD ALIGN=LEFT><B>Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD><B>Utilization</B></TD><TD COLSPAN='2'><B>Note(s)</B></TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Total Number Slice Registers</TD>
-<TD ALIGN=RIGHT>3,063</TD>
+<TD ALIGN=RIGHT>3,057</TD>
 <TD ALIGN=RIGHT>21,504</TD>
 <TD ALIGN=RIGHT>14%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Flip Flops</TD>
-<TD ALIGN=RIGHT>3,062</TD>
+<TD ALIGN=RIGHT>3,056</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -77,37 +77,37 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of 4 input LUTs</TD>
-<TD ALIGN=RIGHT>4,954</TD>
+<TD ALIGN=RIGHT>4,959</TD>
 <TD ALIGN=RIGHT>21,504</TD>
 <TD ALIGN=RIGHT>23%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>3,932</TD>
+<TD ALIGN=RIGHT>3,830</TD>
 <TD ALIGN=RIGHT>10,752</TD>
-<TD ALIGN=RIGHT>36%</TD>
+<TD ALIGN=RIGHT>35%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of Slices containing only related logic</TD>
-<TD ALIGN=RIGHT>3,932</TD>
-<TD ALIGN=RIGHT>3,932</TD>
+<TD ALIGN=RIGHT>3,830</TD>
+<TD ALIGN=RIGHT>3,830</TD>
 <TD ALIGN=RIGHT>100%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of Slices containing unrelated logic</TD>
 <TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>3,932</TD>
+<TD ALIGN=RIGHT>3,830</TD>
 <TD ALIGN=RIGHT>0%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Total Number of 4 input LUTs</TD>
-<TD ALIGN=RIGHT>5,227</TD>
+<TD ALIGN=RIGHT>5,232</TD>
 <TD ALIGN=RIGHT>21,504</TD>
 <TD ALIGN=RIGHT>24%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>4,265</TD>
+<TD ALIGN=RIGHT>4,270</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -185,7 +185,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>3.43</TD>
+<TD ALIGN=RIGHT>3.44</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -222,20 +222,20 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Fri Sep 16 15:41:43 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/xst.xmsgs?&DataKey=Warning'>275 Warnings (275 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/xst.xmsgs?&DataKey=Info'>129 Infos (129 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.bld'>Translation Report</A></TD><TD>Current</TD><TD>Fri Sep 16 15:46:06 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>71 Warnings (39 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/ngdbuild.xmsgs?&DataKey=Info'>67 Infos (67 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Fri Sep 16 15:47:03 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/map.xmsgs?&DataKey=Warning'>152 Warnings (152 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/map.xmsgs?&DataKey=Info'>9 Infos (9 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Fri Sep 16 15:47:36 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/par.xmsgs?&DataKey=Warning'>119 Warnings (119 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/par.xmsgs?&DataKey=Info'>1 Info (1 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Fri Sep 16 16:47:22 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/xst.xmsgs?&DataKey=Warning'>272 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/xst.xmsgs?&DataKey=Info'>129 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.bld'>Translation Report</A></TD><TD>Current</TD><TD>Fri Sep 16 16:47:46 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>71 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/ngdbuild.xmsgs?&DataKey=Info'>67 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Fri Sep 16 16:49:01 2016</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Fri Sep 16 16:49:35 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/par.xmsgs?&DataKey=Warning'>119 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/par.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Fri Sep 16 15:47:49 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/trce.xmsgs?&DataKey=Info'>3 Infos (3 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Fri Sep 16 15:48:25 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>117 Warnings (117 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/bitgen.xmsgs?&DataKey=Info'>3 Infos (3 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Fri Sep 16 16:49:48 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/trce.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Fri Sep 16 16:50:01 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>117 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/bitgen.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Sep 16 15:48:27 2016</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Fri Sep 16 15:48:27 2016</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 09/16/2016 - 15:48:51</center>
+<br><center><b>Date Generated:</b> 09/16/2016 - 16:50:17</center>
 </BODY></HTML>
