--- a/GEL_CAPTAN/TOP_LEVEL_summary.html
+++ b/GEL_CAPTAN/TOP_LEVEL_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>TOP_LEVEL Project Status (09/16/2016 - 16:50:04)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>TOP_LEVEL Project Status (09/16/2016 - 16:51:32)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>dig_mac.xise</TD>
@@ -13,7 +13,7 @@
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
 <TD>TOP_LEVEL</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
-<TD>Bitgen Completed</TD>
+<TD>Programming File Generated</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
@@ -228,14 +228,14 @@ System Settings</A>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Fri Sep 16 16:49:35 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/par.xmsgs?&DataKey=Warning'>119 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/par.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Fri Sep 16 16:49:48 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/trce.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Fri Sep 16 16:50:01 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>117 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/bitgen.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\TOP_LEVEL.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Fri Sep 16 16:50:29 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>117 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/bitgen.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Fri Sep 16 15:48:27 2016</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Sep 16 16:50:29 2016</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 09/16/2016 - 16:50:17</center>
+<br><center><b>Date Generated:</b> 09/16/2016 - 16:51:32</center>
 </BODY></HTML>
