--- a/GEL_CAPTAN/TOP_LEVEL_summary.html
+++ b/GEL_CAPTAN/TOP_LEVEL_summary.html
@@ -7,6 +7,7 @@
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>dig_mac.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
+<TD ALIGN=LEFT><font color='red'; face='Arial'><b>X </b></font><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\_xmsgs/pn_parser.xmsgs?&DataKey=Error'>1 Error</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
@@ -235,9 +236,9 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Sep 23 14:45:17 2016</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Fri Sep 23 14:45:17 2016</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 09/23/2016 - 14:45:22</center>
+<br><center><b>Date Generated:</b> 09/23/2016 - 17:09:21</center>
 </BODY></HTML>
