JTLYK ethernet reset does not work
Just To Let You Know, reset over ethernet does not work because when you
enable the reset state, everything resets and you cannot turn the reset
off.  Good luck!

--- a/GEL_CAPTAN/TOP_LEVEL_summary.html
+++ b/GEL_CAPTAN/TOP_LEVEL_summary.html
@@ -7,6 +7,7 @@
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>dig_mac.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
+<TD> No Errors </TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
@@ -234,9 +235,9 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Fri Oct 7 14:57:24 2016</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Oct 7 17:08:51 2016</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/NewADCFirmware/GEL_CAPTAN\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Fri Oct 7 17:08:51 2016</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 10/07/2016 - 17:09:18</center>
+<br><center><b>Date Generated:</b> 10/07/2016 - 17:18:19</center>
 </BODY></HTML>
